chore(*): Update codebase

--- a/src/components/Home/ProfilePic/ProfilePic.css
+++ b/src/components/Home/ProfilePic/ProfilePic.css
@@ -5,7 +5,7 @@
   height: 264px;
   margin: auto;
   width: 198px;
-  margin-top: 5vh;
+  margin-top: 10px;
   border: 3px solid black;
   border-radius: 6px;
 }
