--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -15,7 +15,26 @@ p.project-description {
   font-size: 1.2vw;
 }
 
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 850px) and (min-width: 560px) {
+  .all-projects {
+    padding-top: 5vh;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    width: 50%;
+    margin: auto;
+  }
+
+  h2.project-title {
+    font-size: 15px;
+  }
+
+  p.project-description {
+    font-size: 10px;
+  }
+}
+
+@media only screen and (max-width: 559px) {
   .all-projects {
     padding-top: 5vh;
     display: grid;
@@ -32,7 +51,6 @@ p.project-description {
     font-size: 10px;
   }
 }
-
 @media only screen and (min-width: 1400px) {
   h2.project-title {
     font-size: x-large;
